--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Source"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -54,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,11 +905,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pyband FLAPW v1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from matplotlib.ticker import MultipleLocator\n",
+    "\n",
+    "# データファイルのパス\n",
+    "file_path = 'band.xy'\n",
+    "\n",
+    "# データをDataFrameにロード\n",
+    "data = pd.read_csv(file_path, delim_whitespace=True, skiprows=1, \n",
+    "                   names=['kx', 'ky', 'kz', 'dist', 'eig', 'iband', 'line'])\n",
+    "\n",
+    "# lineの最大値を取得\n",
+    "max_line_value = data['line'].max()\n",
+    "\n",
+    "# lineの値が1からmax_line_valueまでの各値に対して、最初と最後に出現するdistの値を抽出\n",
+    "x_positions_for_labels = []\n",
+    "for line_value in range(1, max_line_value + 1):\n",
+    "    first_occurrence = data[data['line'] == line_value]['dist'].iloc[0]\n",
+    "    x_positions_for_labels.append(first_occurrence)\n",
+    "    if line_value == max_line_value:\n",
+    "        last_occurrence = data[data['line'] == line_value]['dist'].iloc[-1]\n",
+    "        x_positions_for_labels.append(last_occurrence)\n",
+    "\n",
+    "# プロット設定\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "\n",
+    "# 'iband'値ごとにサブセットでプロット\n",
+    "colors = plt.cm.viridis(np.linspace(0, 1, len(data['iband'].unique())))\n",
+    "for iband, color in zip(data['iband'].unique(), colors):\n",
+    "    subset = data[data['iband'] == iband]\n",
+    "    plt.plot(subset['dist'], subset['eig'], linestyle='-', color='blue')\n",
+    "\n",
+    "# custom_labels の定義\n",
+    "custom_labels = ['Γ', 'X', 'M', 'R', 'Z', 'A']\n",
+    "\n",
+    "# x位置での垂直線を描画\n",
+    "for pos in x_positions_for_labels:\n",
+    "    plt.axvline(x=pos, color='gray', linestyle='--', linewidth=0.5)\n",
+    "\n",
+    "# カスタムx軸の目盛りとラベルを設定\n",
+    "plt.xticks(x_positions_for_labels, custom_labels)\n",
+    "\n",
+    "# x軸の範囲をデータが存在する範囲に設定\n",
+    "plt.xlim(data['dist'].min(), data['dist'].max())\n",
+    "plt.ylim(-15,15)\n",
+    "plt.gca().yaxis.set_major_locator(MultipleLocator(5))\n",
+    "\n",
+    "plt.title('Band Structure')\n",
+    "#plt.xlabel('Distance')\n",
+    "plt.ylabel('Energy[eV]')\n",
+    "plt.grid(True)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
   }
  ],
  "metadata": {
